--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,11 @@ serde = { version = "1.0.163", features = ["derive"] }
 serde_json = "1.0.96"
 tracing-subscriber = "0.3.17"
 tracing = "0.1.37"
+serde_urlencoded = "0.7.1"
+async-trait = "0.1.68"
+url_encoded_data = "0.6.1"
+serde-aux = "4.2.0"
 
 [dev-dependencies]
 axum-macros = "0.3.7"
+proptest = "1.1.0"
